# wheel

./: manifest.in  pyproject.toml  setup.py
.github/workflows/: publish.yml
scripts/: quarto.py
