[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Quarto"
version = "0.0.1"
authors = [
  { name="Charles Teague", email="cteague@gmail.com" },
]
description = "A package for distributing Quarto."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/quarto-dev/quarto-cli"
Issues = "https://github.com/quarto-dev/quarto-cli/issues"

[tool.hatch.build.targets.wheel.force-include]
"bin" = "pkg"
"share" = "pkg"

[tool.hatch.build.targets.wheel]
universal = false
platforms = ["macosx_10_9_universal2"]

[project.scripts]
cli-name = "scripts.quarto:run"

