[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Quarto"
version = "0.0.1"
authors = [
  { name="Charles Teague", email="cteague@gmail.com" },
]
description = "A package for distributing Quarto."
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/quarto-dev/quarto-cli"
Issues = "https://github.com/quarto-dev/quarto-cli/issues"

[tool.setuptools]
include-package-data = true
packages = ['quarto']

[project.scripts]
quarto = "quarto.quarto:run"
